fix: overflow on web

--- a/eyestyle.css
+++ b/eyestyle.css
@@ -6,9 +6,6 @@
 
 body {
   background: #cdea67;
-  padding: 15px 10px;
-  height: 100vh;
-  width: 100vw;
 }
 
 nav {
@@ -18,6 +15,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 2em;
 }
 
 nav a, footer a {
@@ -32,11 +30,10 @@ nav a, footer a {
 }
 
 .wrapper {
-  height: 100vh;
-  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
 #svg {
@@ -62,12 +59,12 @@ nav a, footer a {
 .text {
   text-decoration: none;
   font-family: sans-serif;
-  font-size: 175px;
+  font-size: 150px;
   font-weight: bolder;
-  line-height: 175px;
+  line-height: 150px;
   overflow: hidden;
   text-transform: uppercase;
-  height: 175px;
+  height: 155px;
   color: #222222;
 }
 
